# typmark

./: .gitignore  CLI.ja.md  CLI.md  Cargo.toml  LICENSE-MIT  README.ja.md  README.md  REFERENCE.ja.md  REFERENCE.md  test2
.github/workflows/: ci.yml  release.yml
crates/typmark-cli/: Cargo.toml
crates/typmark-core/: Cargo.toml
crates/typmark-core/src/: ast.rs  diagnostic.rs  emit.rs  entities.rs  label.rs  lib.rs  math.rs  parser.rs  resolver.rs  section.rs  source_map.rs  span.rs
crates/typmark-core/tests/: commonmark_spec.rs  document_settings.rs  emit_options.rs  golden.rs  list_tabs_test.rs  property.rs  source_map_emit.rs
crates/typmark-renderer/: Cargo.toml
crates/typmark-wasm/: Cargo.toml  README.md
crates/typmark-wasm/src/: lib.rs
document/: core.md  gfm_phase2_report.md  implementation.md  phase1.md  phase1_tasks.md  spec.md
tests/: README.md
tests/expect/: atx_heading_closing.html  atx_heading_closing_invalid.html  atx_heading_indent.html  atx_heading_no_space.html  block_attr_cases.html  block_misc_cases.html  box_style_cases.html  code_block_cases.html  diag_attr_values.diag.json  diag_label_dup.diag.json  diag_misc.diag.json  diag_ref_omit.diag.json  diag_ref_self_title.diag.json  emph_commonmark_all.html  gfm_autolink_cases.html  gfm_strikethrough_cases.html  gfm_table_cases.html  gfm_task_list_cases.html  image_reference_cases.html  indented_code_basic.html  inline_context_cases.html  inline_formatting_cases.html  inline_misc_cases.html  link_commonmark_cases.html  list_cases.html  math_block_inline.html  math_error_cases.html  (+5 more)
(+36 files in other folders)
