[package]
name = "typmark-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ammonia = "4.1.2"
comemo = "0.4"
lru = "0.12.3"
once_cell = "1.19.0"
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-svg = "0.14.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.19"
